# pydantic-tes

./: HISTORY.rst  MANIFEST.in  Makefile  README.rst  requirements.txt  setup.cfg  tox.ini
.github/workflows/: deploy.yaml  test.yaml  tox.yaml
pydantictes/: api.py  funnelfixture.py  funnelwrapper.py  gen.sh  models.py
scripts/: commit_version.py  new_version.py  print_version_for_release.py
test/: conftest.py  test_funnel.py
