[bdist_wheel]
universal = 1

[flake8]
exclude =
    .eggs
    .git
    .tox
    .venv
    build
# E203 is whitespace before ':'; we follow black's formatting here. See https://black.readthedocs.io/en/stable/faq.html#why-are-flake8-s-e203-and-w503-violated
# E501 is line length, managed by black
# W503 is line breaks before binary operators, which has been reversed in PEP 8.
ignore = E203,E501,E741,SFS3,W503
max-line-length = 150
max-complexity = 30
import-order-style = smarkets
application-import-names = pydantictes,test

[metadata]
author = John Chilton
author_email = jmchilton@gmail.com
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.6
        Programming Language :: Python :: 3.7
        Programming Language :: Python :: 3.8
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
description = Pydantic Models for the GA4GH Task Execution Service
license = MIT
license_files =
    LICENSE
long_description = file: README.rst, HISTORY.rst
long_description_content_type = text/x-rst
name = pydantic-tes
project_urls =
    Bug Tracker = https://github.com/jmchilton/pydantic-tes/issues
    Source Code = https://github.com/jmchilton/pydantic-tes/issues
version = attr: pydantictes.__version__

[options]
# TODO: Make requests conditional
install_requires =
    pydantic
    requests
    typing-extensions
packages = find:
python_requires = >=3.6

[options.extras_require]
testing =
    pytest

[options.packages.find]
exclude = tests
